--- a/sortnames/Makefile
+++ b/sortnames/Makefile
@@ -20,8 +20,8 @@ dist:
 	cp *.c sortnames-1.1/
 	cp *.n sortnames-1.1/
 	cp Makefile sortnames-1.1/
-	tar -cvf ${CC}.tar sortnames-1.1
+	tar -cvzf $sortnames-1.1.tgz sortnames-1.1
 distclean:
-	rmdir *.tar
+	rmdir sortnames-1.1.tgz
 clean:
 	rm -f sortnames.o sortnames
