added -D_XOPEN_SOURCE as a flag on makefile because I was getting an error saying the sys/msg header needs it, but am not quite sure why that is and if it is the right solution. Compilation works, at any rate

--- a/vehicle_test_grid/Makefile
+++ b/vehicle_test_grid/Makefile
@@ -19,7 +19,7 @@
 # make distclean -> delete all files that aren't needed anymore
 #
 CC=gcc
-CFLAGS = -g -Wall -Werror -O -std=c99
+CFLAGS = -g -Wall -Werror -O -std=c99 -D_XOPEN_SOURCE
 
 all: gridserver vehicleclient griddisplay
 
