updated comments to reflect correct program name

--- a/labrob/Makefile
+++ b/labrob/Makefile
@@ -5,11 +5,11 @@
 # if13b076 - Linda Spindler
 # if13b070 - K Kollmann
 #
-# make all -> create executable program 'sortnames' (use Option -g)
+# make all -> create executable cpp program 'labrob' (use Option -g)
 # make = make all
 # make clean -> delete all files created during program creation
 # make dist -> make release archive (using tar) containing a sub dir named
-# like program + version no. (sortnames-1.1) with all necessary files
+# like program + version no. with all necessary files
 # (all program files and input files etc. but no executables)
 # make distclean -> delete all files that aren't needed anymore
 #
