corrected Makefile to reflect removed .cpp includes

--- a/labrob/Makefile
+++ b/labrob/Makefile
@@ -15,37 +15,13 @@
 #
 CC=g++
 CFLAGS = -g -Wall -Werror -O
+DEPS = robots.h mazes.h t1.h t2.h
 
 all: labrob
-# TODO: uncomment once checkuserinput is merged into labrob again.
-# labrob: labrob.o
-# 	${CC} ${CFLAGS} -o labrob labrob.cpp
-# labrob.o: labrob.cpp
-# 	${CC} ${CFLAGS} -c labrob.cpp
-
-# start checkuserinput -- TODO: remove later on
 labrob: labrob.o
-	${CC} ${CFLAGS} -o labrob labrob.cpp
-labrob.o: labrob.cpp checkuserinput.cpp mazes_findentrance.cpp mazes_dummyprint.cpp mazes_dummyprint.cpp mazes_iswall.cpp t1_exitsearch.cpp t2_exitsearch.cpp robots_stepforward.cpp robots_stepforward_v2.cpp robots_turnleft.cpp
+	${CC} ${CFLAGS} -o labrob labrob.o
+labrob.o: labrob.cpp ${DEPS}
 	${CC} ${CFLAGS} -c labrob.cpp
-mazes_findentrance.o: mazes_findentrance.cpp
-	${CC} ${CFLAGS} -c checkuserinput.cpp
-mazes_dummyprint.o: mazes_dummyprint.cpp
-	${CC} ${CFLAGS} -c mazes_dummyprint.cpp
-mazes_iswall.o: mazes_iswall.cpp
-	${CC} ${CFLAGS} -c mazes_iswall.cpp
-t1_exitsearch.o: t1_exitsearch.cpp
-	${CC} ${CFLAGS} -c t1_exitsearch.cpp
-t2_exitsearch.o: t2_exitsearch.cpp
-	${CC} ${CFLAGS} -c t2_exitsearch.cpp
-robots_stepforward.o: robots_stepforward.cpp
-	${CC} ${CFLAGS} -c robots_stepforward.cpp
-robots_stepforward_v2.o: robots_stepforward_v2.cpp
-	${CC} ${CFLAGS} -c robots_stepforward_v2.cpp
-robots_turnleft.o: robots_turnleft.cpp
-	${CC} ${CFLAGS} -c robots_turnleft.cpp
-
-# stop checkuserinput -- TODO: remove later on
 
 dist:
 	mkdir labrob_kollmann_spindler
